Alignment Issues Fix

--- a/src/components/pages/Home/HeroSection/HeroSection.scss
+++ b/src/components/pages/Home/HeroSection/HeroSection.scss
@@ -229,9 +229,9 @@
   right:0px !important;
   top:-20px;
 }
-.logo-slider .logo-image{
+.home .logo-slider .logo-image{
   position: relative;
-  left:-40px;
+  left:-48px !important;
 }
 .benifits-section .benifit-card h3{
   font-size:54px;
