--- a/src/styles/master.scss
+++ b/src/styles/master.scss
@@ -119,7 +119,9 @@ button {
   cursor: pointer;
   transition: 0.3s ease;
 }
-
+h1{
+  letter-spacing: -2px;
+}
 h1,
 h2 {
   // letter-spacing: -3px;
@@ -136,6 +138,11 @@ h5 {
   line-height: 100%;
   color: #000;
   font-family: $font-heading;
+}
+h2,
+h3,
+h4,
+h5 {
   letter-spacing: -1px;
 }
 
